--- a/locale/ig/LC_MESSAGES/messages.po
+++ b/locale/ig/LC_MESSAGES/messages.po
@@ -3,160 +3,170 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-03-18 16:05+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2015-03-20 13:22+0000\n"
+"Last-Translator: ig-NG02_Chigozie <ezeanichigozie@ikolo.com.ng>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: ig\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.9.0\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1426857768.0\n"
 
 #: public/js/lib/cancel.js:33 public/js/lib/cancel.js:16 public/js/lib/cancel.js:18 public/js/views/payment-failed.js:19
 msgid "Payment cancelled."
-msgstr ""
+msgstr "ịkagbu ụgwọ akwụrụ"
 
 #: public/js/views/create-pin.js:105 templates/error.html:20 templates/pin-form.html:26 public/js/views/create-pin.js:104 public/js/views/error.js:51 templates/simulate.html:17
 #: public/js/views/create-pin.js:140 templates/pin-form.html:37 public/js/views/create-pin.js:155 public/js/views/error.js:54 public/js/views/create-pin.js:158 public/js/views/create-pin.js:160
 msgid "Cancel"
-msgstr ""
+msgstr "Wepụ"
 
 #: public/js/lib/pin-widget.js:58 public/js/lib/pin-widget.js:64 public/js/lib/pin-widget.js:68 public/js/lib/pin-widget.js:65 public/js/lib/pin-widget.js:83 public/js/lib/pin-widget.js:82
 #: public/js/lib/pin-widget.js:93
 msgid "PIN can only contain digits."
 msgstr ""
+"Ikike mbanye ga-enwe naanị akara pụrụ iche.                                "
 
 #: webpay/base/templates/base.html:30
 msgid "You logged in as a different user, you must start the payment again."
-msgstr ""
+msgstr " ịbanyere dịka onye ọzọ. ị ga-ebido ịkwụ ụgwọ ọzọ                "
 
 #: public/js/views/throbber.js:15 public/js/views/throbber.js:16 templates/throbber.html:7
 msgid "Loading"
-msgstr ""
+msgstr " N'abanye                "
 
 #: webpay/base/templates/base.html:32
 msgid "Beginning payment"
-msgstr ""
+msgstr "N’ebido ịkwụ ụgwọ                 "
 
 #: public/js/views/login.js:19 public/js/views/force-auth.js:81 public/js/views/login.js:18 public/js/views/reset-start.js:67 public/js/views/force-auth.js:93 public/js/views/reset-start.js:70
 #: public/js/views/force-auth.js:92 public/js/views/reset-start.js:72
 msgid "Connecting to Persona"
-msgstr ""
+msgstr "N'ejikọ mbanye gị                "
 
 #: webpay/base/templates/base.html:34
 msgid "Payment complete"
-msgstr ""
+msgstr "ịkwụ ụgwọ ezuola                "
 
 #: public/js/lib/auth.js:22 public/js/lib/auth.js:20 public/js/views/page.js:41
 msgid "Oops"
-msgstr ""
+msgstr "Ewoo                "
 
 #: public/js/lib/auth.js:65 public/js/lib/auth.js:84 public/js/lib/auth.js:155 public/js/lib/auth.js:86 public/js/lib/auth.js:157
 msgid "This is taking longer than expected. Try again?"
-msgstr ""
+msgstr "ọ na-egbu oge karịa ka okwesịrị. Nwaa ọzọ?                "
 
 #: public/js/lib/auth.js:19
 msgid "Something went wrong. Try again?"
-msgstr ""
+msgstr "Onwere ihe mere. Nwaa ọzọ?                "
 
 #: templates/error.html:27 public/js/views/error.js:52 public/js/views/error.js:87 public/js/views/locked.js:24 templates/iframe-overlay.html:14 public/js/views/error.js:55
 #: public/js/views/error.js:90
 msgid "OK"
-msgstr ""
+msgstr "ọdị mma                "
 
 #: public/js/views/error.js:44 public/js/views/locked.js:23 public/js/views/error.js:54 public/js/views/error.js:57
 msgid "Error"
-msgstr ""
+msgstr "Ngahie                "
 
 #: public/js/views/enter-pin.js:96 public/js/views/enter-pin.js:100 public/js/views/enter-pin.js:97 public/js/views/enter-pin.js:101 public/js/views/enter-pin.js:105 public/js/views/enter-pin.js:113
 #: public/js/views/enter-pin.js:117 public/js/views/enter-pin.js:115 public/js/views/enter-pin.js:119
 msgid "Enter PIN"
-msgstr ""
+msgstr "Tinye ikike mbanye                "
 
 #: public/js/views/login.js:25 templates/login.html:5 public/js/views/fxa-login.js:25 public/js/views/fxa-login.js:27 public/js/views/login.js:24 public/js/views/login.js:26
 #: public/js/views/fxa-login.js:26 public/js/views/fxa-login.js:28 public/js/views/fxa-login.js:29
 msgid "Sign In"
-msgstr ""
+msgstr "Banye                "
 
 #: templates/login.html:6 public/js/views/fxa-login.js:28 public/js/views/login.js:27 public/js/views/fxa-login.js:29 public/js/views/fxa-login.js:30
 msgid "Sign in to continue with the payment"
-msgstr ""
+msgstr "Banye ka iwee kwụọ ụgwọ                "
 
 #: templates/login.html:7 templates/login.html:9 templates/login.html:14
 msgid "Sign in"
-msgstr ""
+msgstr "                  Banye                "
 
 #: public/js/views/create-pin.js:106 public/js/views/create-pin.js:113 public/js/views/reset-pin.js:64 templates/reset-start.html:12 templates/was-locked.html:12 public/js/views/create-pin.js:105
 #: public/js/views/create-pin.js:112 templates/simulate.html:18 public/js/views/create-pin.js:141 public/js/views/create-pin.js:148 public/js/views/reset-pin.js:65 public/js/views/create-pin.js:156
 #: public/js/views/create-pin.js:163 public/js/views/reset-pin.js:68 templates/signout.html:14 public/js/views/create-pin.js:159 public/js/views/create-pin.js:166 templates/super-simulate.html:20
 #: public/js/views/create-pin.js:161 public/js/views/create-pin.js:168
 msgid "Continue"
-msgstr ""
+msgstr "Gaa n'ihu                "
 
 #: public/js/views/enter-pin.js:73 public/js/views/enter-pin.js:74 public/js/views/enter-pin.js:78 public/js/views/enter-pin.js:90 public/js/views/enter-pin.js:92
 msgid "Wrong PIN"
-msgstr ""
+msgstr "                  Ikike mbanye abụghị ya                "
 
 #: public/js/views/create-pin.js:48 public/js/views/create-pin.js:84 public/js/views/create-pin.js:97 public/js/views/create-pin.js:100 public/js/views/create-pin.js:102
 msgid "PINs do not match."
-msgstr ""
+msgstr "Ikike mbanye itinyere amakọghị                "
 
 #: webpay/pin/views.py:46 webpay/testing/views.py:25
 msgid "Create a PIN"
-msgstr ""
+msgstr " kepụta ikike mbanye                "
 
 #: webpay/pin/views.py:68 webpay/pin/views.py:185 public/js/views/create-pin.js:36 public/js/views/create-pin.js:71 public/js/views/create-pin.js:82 public/js/views/create-pin.js:84
 msgid "Confirm PIN"
-msgstr ""
+msgstr "Nabata ikike mbanye                "
 
 #: webpay/pin/views.py:131 webpay/pin/views.py:157 webpay/pin/templates/pin/pin_was_locked.html:13 public/js/views/reset-pin.js:65 public/js/views/reset-pin.js:68 templates/was-locked.html:11
 #: public/js/views/force-auth.js:89 public/js/views/force-auth.js:102 public/js/views/reset-pin.js:66 public/js/views/reset-pin.js:69 public/js/views/force-auth.js:101 public/js/views/reset-pin.js:72
 #: public/js/views/force-auth.js:96
 msgid "Reset PIN"
-msgstr ""
+msgstr "Dezigharịa ikike mbanye                "
 
 #. This is the same as the standard forgot
 #. password that most sites have.
 #: templates/pin-form.html:18 templates/reset-start.html:6 templates/pin-form.html:29 templates/pin-form.html:30
 msgid "Forgot your PIN?"
-msgstr ""
+msgstr "Ichezọrọ ikike mbanye gị?                "
 
 #: public/js/views/locked.js:24 public/js/views/locked.js:22
 msgid "You entered the wrong PIN too many times. Your account is locked. Please try your purchase again in 5 minutes."
 msgstr ""
+"Itinyere nke abụghị ya ọtụtụ ugbo. Amachiela gị. Biko nwaa ọzọ na nkeji ise. "
+"          "
 
 #: templates/was-locked.html:6
 msgid "Your PIN was locked"
-msgstr ""
+msgstr "Agbachiela ikike mbanye gị                "
 
 #: templates/was-locked.html:7
 msgid "Your PIN was locked because you entered it incorrectly too many times. You can continue and try entering your PIN again or reset your PIN."
 msgstr ""
+"Agbachiri ikike mbanye gị n'ihina itinyere nke abụghị ya ọtụtụ ugbo. Inwere "
+"ike ị ga n'ihu ma tinyekwa ya ọzọ maọbụ dezigharịa ikike mbanye gị. "
+"               "
 
 #: templates/reset-start.html:7 templates/reset-start.html:10
 msgid "Are you sure you want to reset your PIN? You must sign in to Persona to reset your PIN."
 msgstr ""
+"Ichere n’ịchọrọ idezigharị ikike mbanye gị?  ị ga-etinye ihe banyere gị iji "
+"me otu ahụ.                                "
 
 #: webpay/provider/templates/provider/wait-to-finish.html:6 webpay/provider/templates/provider/wait-to-finish.html:12
 msgid "Verifying payment"
-msgstr ""
+msgstr "Inyocha ụgwọ akwụrụ                "
 
 #: public/js/lib/auth.js:29 public/js/lib/auth.js:30 public/js/lib/auth.js:25 public/js/lib/auth.js:39 public/js/lib/auth.js:26 public/js/lib/auth.js:41
 msgid "Retrying"
-msgstr ""
+msgstr " ịnwagharị                "
 
 #: public/js/lib/auth.js:64
 msgid "That took longer than expected. Retry?"
-msgstr ""
+msgstr "Ogburu oge karịa ka okwesịrị. Nwagharịa                "
 
 #: public/js/views/create-pin.js:37 templates/reset-start.html:11 public/js/views/create-pin.js:72 templates/reset-start.html:15 public/js/views/create-pin.js:83 public/js/views/create-pin.js:85
 msgid "Back"
-msgstr ""
+msgstr " Azụ                "
 
 #: public/js/views/create-pin.js:38 public/js/views/enter-pin.js:95 public/js/views/enter-pin.js:96 public/js/views/create-pin.js:73 public/js/views/enter-pin.js:100 public/js/views/create-pin.js:84
 #: public/js/views/enter-pin.js:112 public/js/views/enter-pin.js:114 public/js/views/create-pin.js:86
 msgid "Submit"
-msgstr ""
+msgstr "Nyefee                "
 
 #: public/js/views/create-pin.js:66 public/js/views/enter-pin.js:60 public/js/views/reset-pin.js:28 public/js/lib/wait.js:171 public/js/views/create-pin.js:65 public/js/views/enter-pin.js:61
 #: public/js/views/force-auth.js:53 public/js/views/reset-pin.js:29 public/js/views/reset-start.js:107 public/js/views/create-pin.js:101 public/js/views/enter-pin.js:65
@@ -165,212 +175,227 @@ msgstr ""
 #: public/js/views/page.js:43 public/js/views/reset-pin.js:33 public/js/views/reset-start.js:124 public/js/lib/wait.js:170 public/js/views/create-pin.js:119 public/js/views/enter-pin.js:77
 #: public/js/views/reset-start.js:101 public/js/views/create-pin.js:121
 msgid "Retry?"
-msgstr ""
+msgstr "  Nwagharịa?                                "
 
 #: public/js/views/create-pin.js:114 public/js/views/create-pin.js:116 public/js/views/create-pin.js:113 public/js/views/create-pin.js:115 public/js/views/create-pin.js:149
 #: public/js/views/create-pin.js:152 public/js/views/create-pin.js:164 public/js/views/create-pin.js:167 public/js/views/create-pin.js:170 public/js/views/create-pin.js:169
 #: public/js/views/create-pin.js:172
 msgid "Create PIN"
-msgstr ""
+msgstr "Kepụta ikike mbanye                "
 
 #: public/js/views/error.js:45
 msgid "Something went wrong."
-msgstr ""
+msgstr " Onwere ihe mere.                "
 
 #: public/js/views/reset-start.js:29 public/js/views/reset-start.js:118 public/js/views/reset-start.js:119 public/js/views/reset-start.js:123 public/js/views/reset-start.js:133
 #: public/js/views/reset-start.js:135 public/js/views/reset-start.js:112
 msgid "Reset your PIN?"
-msgstr ""
+msgstr "Dezigharịa ikike mbanye gị?                                "
 
 #: public/js/views/was-locked.js:13 public/js/views/was-locked.js:38 public/js/views/was-locked.js:42
 msgid "Was Locked"
-msgstr ""
+msgstr "Akpọchiri ya                "
 
 #: public/js/views/wait-for-tx.js:10 public/js/views/wait-to-start.js:13
 msgid "Setting up payment"
-msgstr ""
+msgstr " A na eguzobe ịkwụ ụgwọ                "
 
 #: public/js/error-codes.js:12
 msgid "An internal web request timed out."
-msgstr ""
+msgstr "  Oge gwụnahụrụ ikike web nke ime.                "
 
 #: public/js/error-codes.js:13
 msgid "The system timed out while trying to log in."
-msgstr ""
+msgstr "Oge dị n'igwe komputa gwụrụ mgbe ọ na anwa ịbanye                 "
 
 #: public/js/error-codes.js:14
 msgid "An error occurred whilst trying to log out."
-msgstr ""
+msgstr " Enwere nsogbu mgbe ọ na anwa ịpụ.                "
 
 #: public/js/error-codes.js:15
 msgid "The system timed out while trying to log out."
-msgstr ""
+msgstr "Oge gwụrụ mgbe ọchọrọ ịpụ.                "
 
 #: public/js/error-codes.js:16
 msgid "Payments are temporarily disabled."
-msgstr ""
+msgstr "Agbanyụrụ ebe ịkwụ ụgwọ na mkpirimkpi oge.                "
 
 #: public/js/error-codes.js:17
 msgid "An unexpected error occurred when creating your PIN."
-msgstr ""
+msgstr "Enwere ọdachi mgbe ana ekepụta ikike mbanye."
 
 #: public/js/error-codes.js:18 public/js/error-codes.js:27
 msgid "The PIN data submitted was invalid."
-msgstr ""
+msgstr " Ndekọ enyefere adabaghị.                "
 
 #: public/js/error-codes.js:19
 msgid "No valid user found whilst attempting to create your PIN"
 msgstr ""
+"Onweghị onye ahụrụ nwe ya mgbe achọrọ ikepụta ikike mbanye gị "
+"                               "
 
 #: public/js/error-codes.js:20
 msgid "Permission denied attempting to create your PIN."
 msgstr ""
+"Ekweghị ka ịbanye mgbe ịchọrọ ikepụta ikike mbanye gị. "
+"                               "
 
 #: public/js/error-codes.js:21
 msgid "The request timed out whilst attempting to create your PIN."
 msgstr ""
+"Oge gwụrụ mgbe achọrọ ikepụta ikike mbanye gị. "
+"                               "
 
 #: public/js/error-codes.js:22
 msgid "An unexpected error occurred whilst checking your PIN."
 msgstr ""
+"Enwere ihe mgbochi mgbe ana elebara ikike mbanye gị anya.                "
 
 #: public/js/error-codes.js:23
 msgid "No valid user found whilst checking your PIN"
 msgstr ""
+" Onweghị onye ahụrụ nwe ya mgbe ana elebara ikike mbanye gị anya "
+"               "
 
 #: public/js/error-codes.js:24
 msgid "Permission denied attempting to check your PIN"
-msgstr ""
+msgstr "Ekweghị ka ịbanye mgbe ịnwara ile maka ikike mbanye gị                "
 
 #: public/js/error-codes.js:25
 msgid "The request timed out whilst trying to check your PIN"
-msgstr ""
+msgstr " Oge gwụrụ mgbe ịchọrọ ile ikike mbanye gị                "
 
 #: public/js/error-codes.js:26
 msgid "An unexpected error occurred when resetting your PIN."
-msgstr ""
+msgstr "Enwere ọdachi mgbe achọrọ idezigharị ikike mbanye gị.                "
 
 #: public/js/error-codes.js:28
 msgid "No valid user found whilst attempting to reset your PIN"
 msgstr ""
+"Onweghị onye nwe ya ahụrụ mgbe achọrọ idezigharị ikike mbanye gị "
+"               "
 
 #: public/js/error-codes.js:29
 msgid "Permission denied attempting to reset your PIN."
-msgstr ""
+msgstr "Ekweghị ka ịbanye dezigharịa ikike mbanye gị.                "
 
 #: public/js/error-codes.js:30
 msgid "The request timed out whilst attempting to reset your PIN."
-msgstr ""
+msgstr "Oge gwụrụ mgbe achọrọ idezigharị ikike mbanye gị.                "
 
 #: public/js/error-codes.js:31
 msgid "The transaction failed. You have not been charged for this purchase."
-msgstr ""
+msgstr " Azụahịa ahụ agaghị. Onwebeghị ego anara gị na ya.                "
 
 #: public/js/error-codes.js:32
 msgid "The payment method or price point is not supported for this region or operator."
-msgstr ""
+msgstr " Anaghị anabata usoro ịkwụ ụgwọ a n'oke ala ebe a.                "
 
 #: public/js/lib/auth.js:214
 msgid "Waiting for login"
-msgstr ""
+msgstr "Ichere maka mbanye                "
 
 #: public/js/lib/wait.js:56
 msgid "Retrieving Transaction"
-msgstr ""
+msgstr " Inwetaghachi azumahịa emere.                "
 
 #: public/js/views/error.js:55 public/js/views/error.js:58
 msgid "An unexpected error occurred."
-msgstr ""
+msgstr "ọdachi atụghị anya mere.                "
 
 #: public/js/views/force-auth.js:87 public/js/views/force-auth.js:100 public/js/views/force-auth.js:99 public/js/views/force-auth.js:94
 msgid "Sign-in to reset PIN"
-msgstr ""
+msgstr "Banye iji dezigharịa ikike mbanye.                "
 
 #: public/js/views/force-auth.js:90 public/js/views/force-auth.js:103 public/js/views/force-auth.js:102 public/js/views/force-auth.js:97
 msgid "Please sign in to reset your PIN."
-msgstr ""
+msgstr "Banye iji ezigharịa ikike mbanye gị                "
 
 #: public/js/views/init.js:12
 msgid "Initializing"
-msgstr ""
+msgstr "N'abanye                "
 
 #: public/js/views/locked.js:21
 msgid "PIN Locked"
-msgstr ""
+msgstr "Agbachiela ikike mbanye gị                "
 
 #: public/js/views/payment-success.js:15 public/js/views/wait-to-finish.js:14
 msgid "Completing payment"
-msgstr ""
+msgstr "Ana akwụcha ụgwọ                "
 
 #: public/js/views/simulate.js:23
 msgid "Processing"
-msgstr ""
+msgstr "N'ahazi                "
 
 #: public/js/views/simulate.js:51
 msgid "Simulate Payment"
-msgstr ""
+msgstr "ịkwụ ụdị ụgwọ yiri                "
 
 #: public/js/views/simulate.js:55
 msgid "You will not be charged."
-msgstr ""
+msgstr "Agaghị ana gị ego.                "
 
 #: templates/reset-start.html:12 templates/reset-start.html:16
 msgid "Reset"
-msgstr ""
+msgstr "Dozigharịa                "
 
 #: templates/pin-form.html:22
 msgid "By proceeding you agree to our <a %(terms)s>terms</a> and <a %(privacy)s>Privacy Policy</a>"
 msgstr ""
+" Site n'ịga n'ihu ikwerenyere <a %(terms)s>oge</a> na <a %(privacy)s>ikike "
+"nzuzo anyị</a>                "
 
 #: public/js/views/force-auth.js:91 public/js/views/reset-start.js:68 public/js/views/force-auth.js:90 public/js/views/reset-start.js:70 public/js/views/force-auth.js:88 public/js/views/login.js:18
 #: public/js/views/reset-start.js:55
 msgid "Connecting to Firefox Accounts"
-msgstr ""
+msgstr "                  Iwebanye na akaụntụ Firefox                "
 
 #: templates/reset-start.html:8 templates/reset-start.html:7
 msgid "Are you sure you want to reset your PIN? You must sign in to Firefox Accounts to reset your PIN."
 msgstr ""
+"                  Ichere n'ịchọrọ idezigharị ikike mbanye gị? ị ga abanye na "
+"akaụntụ Firefox gị.                "
 
 #: public/js/views/page.js:34
 msgid "Logging out"
-msgstr ""
+msgstr "N'apụ                "
 
 #: templates/signout.html:9
 msgid "You are signed in as:"
-msgstr ""
+msgstr " ịbanyere dịka:                "
 
 #: templates/signout.html:11
 msgid "Not you?"
-msgstr ""
+msgstr " ọbụghị gị?                "
 
 #: public/js/views/super-simulate.js:44 public/js/views/super-simulate.js:64
 msgid "Super Simulate"
-msgstr ""
+msgstr " Myiri bụ ọkpọka                "
 
 #: templates/super-simulate.html:8
 msgid "Simulate Something?"
-msgstr ""
+msgstr " Myiri dịka?                "
 
 #: templates/super-simulate.html:11
 msgid "No network simulation"
-msgstr ""
+msgstr "Onweghị netwọk myiri"
 
 #: public/js/lib/pin-widget.js:71
 msgid "PIN too short"
-msgstr ""
+msgstr "PIN pere oke mpe"
 
 #: public/js/lib/utils.js:191
 msgid "Success"
-msgstr ""
+msgstr "Ntozu"
 
 #: public/js/lib/utils.js:192
 msgid "Your purchase is complete. Close the window to continue"
-msgstr ""
+msgstr "Nzụta gị ezuola. Mechie mpio ahụ iji gaa n'ihu"
 
 #: public/js/lib/utils.js:203
 msgid "An error occurred. Close the window to continue"
-msgstr ""
+msgstr "Mperi dapụtara. Mechie mpio ahụ iji gaa n'ihu"
 
 #: public/js/views/page.js:161
 msgid "Completing Payment"
-msgstr ""
+msgstr "Na-emezu Akwụmụgwọ"
